# nlu-server

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  server.py  utils.py
node/: proxy.js
rasa/: config.yml  nlu.yml
